--- a/src/a3_task4_travis_christy.Rmd
+++ b/src/a3_task4_travis_christy.Rmd
@@ -14,14 +14,18 @@ library(kableExtra)
 library(lubridate)
 ```
 
-#### Reading in urchins.csv using here()
+**CITATION**: Reed, D. 2020. SBC LTER: Reef: Long-term experiment: Kelp removal: Urchin size frequency distribution ver 20. Environmental Data Initiative. [URL LINK](https://doi.org/10.6073/pasta/5a1e9ef03aa47bd2225c0bb98a02a63b) 
+
+#### Task 4
+
+##### Reading in urchins.csv using here()
 
 ```{r}
 urchins_task4 <- read_csv(here("data", "urchins.csv")) %>% 
   clean_names()
 ```
 
-#### Data wrangling for Part 3
+##### Data wrangling for Part 3.a
 
 ```{r}
 urchinsp_both_napl_2010 <- urchins_task4 %>% 
@@ -46,19 +50,23 @@ urchinsp_a_napl_2010 <- urchins_task4 %>%
   filter(year == 2010, month == 1, treatment == "ANNUAL")
 ```
 
-#### 3.b Graphs
+##### 3.b Graphs
 
 ```{r}
 ggplot(data = urchinsp_both_napl_2010, aes(x = size)) +
-  geom_histogram() +
+  geom_histogram(bins = 7) + ## bin number using Juran's guidelines for n= 60 is 7
   facet_wrap(~ treatment)
 ```
+
+
 ```{r}
 ggplot(data = urchinsp_both_napl_2010, aes(sample = size)) +
   geom_qq() +
   facet_wrap(~ treatment)
 ```
+*Main Takeaways:*
 
+ - It seems like the distribution of both group "annual" and "control" have combination distributions. Each observation has a lot of variance from the central tendencies. The QQ plots are showing that observations from both treatments are distributed relatively the same.
 
 ```{r}
 urchins_summary_annual <- urchinsp_both_napl_2010 %>% 
@@ -86,4 +94,16 @@ control_urch <- urchinsp_both_napl_2010 %>%
 t.test(annual_urch, control_urch)
 
 ```
+
+*Discussion:*
+
+The mean purple urchin size from the annual kelp removal sample is 3.92 cm and from the control (aka no kelp removal) group is 3.73 cm. The difference in means is 0.19 cm, which is less than 5% overall change. Furthermore, there is a lot of overlap between the two distributions as standard deviation sizes are comparatively similar. Considering this information  plus the p-value result of the two sample t-test of .25, there is not a significant amount of evidence to suggest that these two samples were drawn from populations with different size means.
+
+The p-value of .2536 explains that the probability of finding AT LEAST our difference of 0.19 cm between sample means if they were drawn from populations with the same means (difference = 0) is about 25%. That's not enough evidence that they are likely from populations with unequal means.
+
+
+
+
+
+
 
