--- a/src/a3_task3_travis_christy.Rmd
+++ b/src/a3_task3_travis_christy.Rmd
@@ -107,8 +107,8 @@ kbl(purple_urchins_counts) %>%
 
 ```{r}
 ggplot(data = purple_urchins_counts, aes(x = year, y = n, color = site_full)) +
-  geom_line() +
-  theme_minimal()
+  geom_col() +
+  facet_wrap(~site_full)
 ```
 
 
